<resources>
    <string name="app_name">PhotoBlog</string>
    <string name="login_logo_desc">logo for login page</string>
    <string name="email_hint">Your Email...</string>
    <string name="password_hint">Password...</string>
    <string name="login_btn_text">Login To Account</string>
    <string name="login_reg_btn_text">Need A New Account?</string>
    <string name="empty_email_pass_error">Please Fill both Email And Password Fields</string>
    <string name="setup_page_title">Account Settings</string>
    <string name="main_page_title">Photo Blog</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_logo_desc">registration logo</string>
    <string name="reg_btn_text">Create New Account</string>
    <string name="reg_login_btn_text">Already Have New Account</string>
    <string name="reg_confirm_password">Confirm Password...</string>
    <string name="reg_confirm_password_error">password is not confirmed</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn_text">Save Account Settings</string>
    <string name="new_post_descreption">Add Descreption</string>
    <string name="new_post_btn">Post</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notifications</string>
    <string name="bottom_account_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
